--- a/pg_re.ipynb
+++ b/pg_re.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -290,142 +290,204 @@
       "-prepare for env- 8\n",
       "-prepare for env- 9\n",
       "-prepare for worker-\n",
-      "WARNING:tensorflow:From /Users/11yunyi/Desktop/Diplomarbeit/PG_for_cloud/PG_ConV for completion time/RL_brain.py:50: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use `tf.keras.layers.Conv2D` instead.\n",
-      "WARNING:tensorflow:From /Users/11yunyi/opt/anaconda3/lib/python3.7/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-      "WARNING:tensorflow:From /Users/11yunyi/Desktop/Diplomarbeit/PG_for_cloud/PG_ConV for completion time/RL_brain.py:53: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.MaxPooling2D instead.\n",
-      "WARNING:tensorflow:From /Users/11yunyi/Desktop/Diplomarbeit/PG_for_cloud/PG_ConV for completion time/RL_brain.py:70: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use keras.layers.dense instead.\n",
       "Preparing for reference data...\n",
-      "Load on # 0 resource dimension is 2.7462222222222223\n",
-      "Load on # 1 resource dimension is 3.1927777777777777\n",
+      "Load on # 0 resource dimension is 2.8845\n",
+      "Load on # 1 resource dimension is 3.44875\n",
       "\n",
       "\n",
       "\n",
       "=============== 0 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -12349.0\n",
+      "total discount reward : \t -2632.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -5647.0\n",
+      "total discount reward : \t -1144.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -11216.0\n",
+      "total discount reward : \t -2534.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -10420.0\n",
+      "total discount reward : \t -2108.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 1 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -8559.0\n",
+      "total discount reward : \t -2508.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3915.0\n",
+      "total discount reward : \t -1574.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -7819.0\n",
+      "total discount reward : \t -2339.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -9070.0\n",
+      "total discount reward : \t -2447.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 2 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -7684.0\n",
+      "total discount reward : \t -1763.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -2661.0\n",
+      "total discount reward : \t -1130.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -7245.0\n",
+      "total discount reward : \t -1508.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -7505.0\n",
+      "total discount reward : \t -2290.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 3 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -10726.0\n",
+      "total discount reward : \t -2483.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -4524.0\n",
+      "total discount reward : \t -1464.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -8913.0\n",
+      "total discount reward : \t -2319.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -9967.0\n",
+      "total discount reward : \t -2709.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 4 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -8196.0\n",
+      "total discount reward : \t -1828.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3786.0\n",
+      "total discount reward : \t -895.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -7307.0\n",
+      "total discount reward : \t -1625.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -8571.0\n",
+      "total discount reward : \t -2138.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 5 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -12452.0\n",
+      "total discount reward : \t -913.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -4535.0\n",
+      "total discount reward : \t -428.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -11370.0\n",
+      "total discount reward : \t -880.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -10012.0\n",
+      "total discount reward : \t -1473.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 6 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -9381.0\n",
+      "total discount reward : \t -1719.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3240.0\n",
+      "total discount reward : \t -938.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -8917.0\n",
+      "total discount reward : \t -1956.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -9833.0\n",
+      "total discount reward : \t -2429.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 7 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -7371.0\n",
+      "total discount reward : \t -2541.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3578.0\n",
+      "total discount reward : \t -1156.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -7562.0\n",
+      "total discount reward : \t -2416.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -9141.0\n",
+      "total discount reward : \t -1948.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 8 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -10635.0\n",
+      "total discount reward : \t -1711.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3497.0\n",
+      "total discount reward : \t -1122.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -10026.0\n",
+      "total discount reward : \t -1686.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -8799.0\n",
+      "total discount reward : \t -2009.0\n",
       "\n",
       "\n",
       "\n",
       "=============== 9 ===============\n",
       "---------- Tetris -----------\n",
-      "total discount reward : \t -8447.0\n",
+      "total discount reward : \t -2002.0\n",
       "---------- SJF -----------\n",
-      "total discount reward : \t -3909.0\n",
+      "total discount reward : \t -1183.0\n",
       "---------- packer -----------\n",
-      "total discount reward : \t -7742.0\n",
+      "total discount reward : \t -1924.0\n",
       "---------- Random -----------\n",
-      "total discount reward : \t -9451.0\n",
-      "Start training...\n"
+      "total discount reward : \t -2341.0\n",
+      "Start training...\n",
+      "\n",
+      "\n",
+      "\n",
+      "-----------------\n",
+      "Iteration: \t 1\n",
+      "NumTrajs: \t 10\n",
+      "NumTimesteps: \t 46248\n",
+      "Loss:     \t -142.16356\n",
+      "MaxRew: \t -2173.6\n",
+      "MeanRew: \t -2738.09 +- 614.1057090599305\n",
+      "MeanSlowdown: \t 68.42724999999999\n",
+      "MeanLen: \t 462.48 +- 213.4534834571692\n",
+      "Elapsed time\t 30.631352186203003 seconds\n",
+      "-----------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "-----------------\n",
+      "Iteration: \t 2\n",
+      "NumTrajs: \t 10\n",
+      "NumTimesteps: \t 45375\n",
+      "Loss:     \t -147.30478\n",
+      "MaxRew: \t -2106.1\n",
+      "MeanRew: \t -2799.49 +- 672.0424911417432\n",
+      "MeanSlowdown: \t 69.962\n",
+      "MeanLen: \t 453.75 +- 217.03729518218753\n",
+      "Elapsed time\t 30.19704294204712 seconds\n",
+      "-----------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "-----------------\n",
+      "Iteration: \t 3\n",
+      "NumTrajs: \t 10\n",
+      "NumTimesteps: \t 39167\n",
+      "Loss:     \t -66.08021\n",
+      "MaxRew: \t -2111.2\n",
+      "MeanRew: \t -2613.53 +- 622.1393325453713\n",
+      "MeanSlowdown: \t 65.30825\n",
+      "MeanLen: \t 391.67 +- 145.17300403311904\n",
+      "Elapsed time\t 26.328066110610962 seconds\n",
+      "-----------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "-----------------\n",
+      "Iteration: \t 4\n",
+      "NumTrajs: \t 10\n",
+      "NumTimesteps: \t 39563\n",
+      "Loss:     \t -142.37558\n",
+      "MaxRew: \t -1976.8\n",
+      "MeanRew: \t -2544.88 +- 660.4472315030172\n",
+      "MeanSlowdown: \t 63.59174999999999\n",
+      "MeanLen: \t 395.63 +- 197.0457132241146\n",
+      "Elapsed time\t 26.44086790084839 seconds\n",
+      "-----------------\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-9d975d5835e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m     \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-9-9d975d5835e4>\u001b[0m in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    234\u001b[0m     \u001b[0mrender\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    235\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 236\u001b[0;31m     \u001b[0mlaunch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpg_resume\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrender\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrepre\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'image'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'all_done'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    237\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-9d975d5835e4>\u001b[0m in \u001b[0;36mlaunch\u001b[0;34m(pa, pg_resume, render, repre, end)\u001b[0m\n\u001b[1;32m     72\u001b[0m             \u001b[0mex_idx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mex_indices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m             \u001b[0meprew\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0meplen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompletion_time\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_ob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_action\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_adv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_traj_worker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menvs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mex_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m             \u001b[0meprewlist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meprew\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0meplenlist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0meplen\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-8af0c8e6e896>\u001b[0m in \u001b[0;36mget_traj_worker\u001b[0;34m(rl, env, pa)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_seq_per_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0mtraj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_traj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepisode_max_length\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0mtrajs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-d6047c8874ef>\u001b[0m in \u001b[0;36mget_traj\u001b[0;34m(agent, env, episode_max_length)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m#print('ob_len:',len(ob[0]))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoose_action\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0mobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mob\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# store the ob at current decision making step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/Diplomarbeit/PG_for_cloud/PG for completion time/RL_brain.py\u001b[0m in \u001b[0;36mchoose_action\u001b[0;34m(self, observation)\u001b[0m\n\u001b[1;32m     84\u001b[0m         \u001b[0mprob_weights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall_act_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtf_obs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mobservation\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;31m#print('prob:',prob_weights)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 86\u001b[0;31m         \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob_weights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprob_weights\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# select action w.r.t the actions prob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     87\u001b[0m         \u001b[0;31m#print('action:',action)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0maction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/numpy/core/getlimits.py\u001b[0m in \u001b[0;36m__new__\u001b[0;34m(cls, dtype)\u001b[0m\n\u001b[1;32m    363\u001b[0m     \u001b[0m_finfo_cache\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 365\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0m__new__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    366\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    367\u001b[0m             \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumeric\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -644,11 +706,11 @@
     "\n",
     "    pa = parameters.Parameters()\n",
     "\n",
-    "    pa.simu_len = 90  # 1000\n",
+    "    pa.simu_len = 40  # 1000\n",
     "    pa.num_ex = 10  #50 # 100\n",
     "    pa.num_nw = pa.simu_len\n",
     "    pa.num_seq_per_batch = 10 #20\n",
-    "    pa.output_freq = 50 #50\n",
+    "    pa.output_freq = 10 #50\n",
     "    pa.batch_size = 10\n",
     "\n",
     "    # pa.max_nw_size = 5\n",
